🐛 (fix): Bug fix overflow component of experiences

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 html {
-  height: 100vh;
   scroll-behavior: smooth;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 html::before {
@@ -21,13 +24,13 @@ html::before {
 }
 
 body {
-  position: relative;
   margin: 0;
-  height: 100vh;
-  max-height: 100vh;
-  overflow-y: auto;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
-}
+  overflow-y: auto;
+} 
 
 html,
 * {
